# Loom-cloud-agent

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  railway.toml  run.py  setup.sh
legacy/: README.md  railway.json  requirements.txt  run.py  setup.sh  spike_loom.py
legacy/memory_agent/: main.py  mcp_server.py  memory.py
legacy/task_agents/: __init__.py  slack_bot.py
loom/: __init__.py  __main__.py  config.py  constants.py  db.py  embeddings.py  errors.py  logging_config.py  tasks.py  utils.py
loom/api/: app.py  auth.py  deps.py  schemas.py
loom/api/routes/: __init__.py  admin.py  ask.py  health.py  internal.py  memory.py
loom/cli/: main.py
loom/llm/: prompts.py  router.py
loom/mcp/: server.py
loom/memory/: formatting.py  models.py  store.py
loom/slack/: bot.py  capture.py  client.py  commands.py
memory_agent/: __init__.py  llm.py  main.py  mcp_server.py  memory.py
scripts/: seed_demo.py
supabase/: schema.sql
task_agents/: slack_bot.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_config.py  test_conversation_memory.py  test_db.py  test_import_boundaries.py  test_mcp_server.py  test_memory_store.py  test_schema_migrations.py  test_slack_capture.py
