[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loom"
version = "1.0.0"
description = "Shared memory layer for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.0",
    "litellm>=1.50.0",
    "slack-bolt>=1.20.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "structlog>=24.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
loom = "loom.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["loom"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring TEST_DATABASE_URL or external service emulator",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "S"]
ignore = [
    "S101",  # pytest uses assert
]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom relies on calling these in argument
# defaults; they are effectively immutable sentinels, so B008 does not apply.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Body",
]

[tool.ruff.lint.per-file-ignores]
# Prompt text is verbatim and intentionally exceeds the line length.
"loom/llm/prompts.py" = ["E501"]
# Tests may use subprocess, hardcoded test secrets, etc.
"tests/*" = ["S105", "S106", "S603", "S607"]
